--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
 				</li>
 		</div>
 	</footer>
-	<script src="/js/script.js"></script>
+	<script src="js/script.js"></script>
 </body>
 
 </html>
